done with employee side

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.14",
     "aws-sdk": "^2.1450.0",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -60,6 +62,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "uploadthing": "^5.7.2",
     "util": "^0.12.5",
     "zod": "^3.22.0"
   },
